# life

./: .gitignore  Cargo.toml  README.md  log.txt  log4rs.yaml
.obsidian/: workspace.json
src/: app.rs  handler.rs  main.rs  ui.rs
src/app/: automata.rs  lifelifecolor.rs  lifelike.rs
