[package]
name = "life"
version = "0.1.0"
authors = ["jet"]
license = "MIT"
edition = "2021"

[dependencies]
color-art = "0.3.9"
crossterm = { version = "0.28.1", features = ["event-stream"] }
env_logger = "0.11.6"
futures = "0.3.31"
grid = "0.16.1"
log = "0.4.25"
log4rs = "1.3.0"
rand = "0.9.0"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
